--- a/package.json
+++ b/package.json
@@ -1,1 +1,46 @@
-{"name":"my-vite-react-app","private":true,"version":"0.0.0","type":"module","scripts":{"dev":"vite","build":"vite build","start":"concurrently \"vite build --watch\" \"npm run hugo\"","lint":"eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0","preview":"vite preview","test":"vitest","coverage":"vitest --coverage"},"dependencies":{"@vitalets/google-translate-api":"^9.2.0","express":"^4.19.2","google-translate-api-x":"^10.6.8","html2canvas":"^1.4.1","react":"^18.3.1","react-audio-spectrum":"^0.1.5","react-dom":"^18.3.1","react-router-dom":"^6.24.1","react-share":"^5.1.0"},"devDependencies":{"@testing-library/react":"^13.4.0","@types/express":"^4.17.21","@types/react":"^18.3.3","@types/react-dom":"^18.3.0","@vitejs/plugin-react":"^4.3.1","@vitest/coverage-c8":"^0.26.2","autoprefixer":"^10.4.13","eslint":"^8.30.0","eslint-config-standard":"^17.0.0","eslint-plugin-import":"^2.26.0","eslint-plugin-n":"^15.6.0","eslint-plugin-promise":"^6.1.1","eslint-plugin-react":"^7.27.1","eslint-plugin-react-hooks":"^4.6.2","eslint-plugin-react-refresh":"^0.4.7","jsdom":"^20.0.3","postcss":"^8.3.11","tailwindcss":"^3.2.4","vite":"^5.3.1","vitest":"^0.26.2"}}
+{
+    "name": "my-vite-react-app",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "start": "concurrently \"vite build --watch\" \"npm run hugo\"",
+        "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview",
+        "test": "vitest",
+        "coverage": "vitest --coverage"
+    },
+    "dependencies": {
+        "@vercel/analytics": "^1.3.1",
+        "express": "^4.19.2",
+        "react": "^18.3.1",
+        "react-audio-spectrum": "^0.1.5",
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^6.24.1",
+        "react-share": "^5.1.0"
+    },
+    "devDependencies": {
+        "@testing-library/react": "^13.4.0",
+        "@types/express": "^4.17.21",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "@vitest/coverage-c8": "^0.26.2",
+        "autoprefixer": "^10.4.13",
+        "eslint": "^8.30.0",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.6.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.27.1",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-react-refresh": "^0.4.7",
+        "jsdom": "^20.0.3",
+        "postcss": "^8.3.11",
+        "tailwindcss": "^3.2.4",
+        "vite": "^5.3.1",
+        "vitest": "^0.26.2"
+    }
+}
