--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react": "^18.3.1",
         "react-audio-spectrum": "^0.1.5",
         "react-dom": "^18.3.1",
+        "react-helmet-async": "^2.0.5",
         "react-router-dom": "^6.24.1",
         "react-share": "^5.1.0"
     },
